

Changes to 1.38.1:
- Apply patch supplied by Eric Bollinger to fix PostgreSQL    
  grant on status. Bug #465
- Apply patch supplied by Eric Bollinger to fix PostgreSQL
  update script. Bug #464
- Fix off by one for last Slot of autochanger for label.
- Update release date.
- Tweak an authentication error message in dir.
- Fix autoloader so that mutex is set and released around
  each run_program().  There was a missing set.
- Remove an unnecessary drive release in autochanger.
- Modify configure.in to add execute option to sqlite3 catalog  
  scripts.
- Create update_xxx_table_8_to_9 scripts for updatedb
- Fix wrong variable in bpipe.c debug output reported by user.
- Fix improper placement of encode_and_send_attributes() in
  FD backup.c causing first file of non-portable Win32 backup
  to have wrong stream. Reported by Thorsten.
- Move the -lcrypt for PostgreSQL after the PostgreSQL libs in
  autoconf/bacula-macros/db.m4 as suggested by user.  Fixes bug #457.
- Remove @STATIC_CONS@ from tray-monitor Makefile as suggested
  by user. Fixes bug #456.

Released 1.38.0 (28Oct05): 31 October 2005

Changes to 1.37.42:
26Oct05
- Don't overwrite pthreadVCE.dll or msvcr71.dll during Win32 
  install.
- Update README.win32 instructions.
25Oct05 
- Make db_get_job_record() return Name so that the ACL
  can be checked.  Fixes bug #446
22Oct05
- Insure that all the SD tools init the Autochanger
  resources.

Changes to 1.37.41:
22Oct05
- Print error message if no Changer Command found.
- Apply fix from Martin Simmons to clear structure before
  using it in IPADDR -- fixes a bind() bug on AIX.
14Oct05
- Add NetBSD fstype patch from Geert Hendrickx <ghen@telenet.be>
- Update num_parts only when writing to DVD.
13Oct05
- Fix error conditions in bpipe.c DVD routine (terminate buffer).
- Use a bigger buffer 32K as suggested by Arno in bpipe.c.
- Increase dvd mount timeout with patch from Arno.
- Modify DVD code so that it keeps a state flag that indicates